Document Post Recipe API in Swagger
