# domain/dto/instruction.go
@@ -1,0 +1,5 @@
+package dto
+
+type Instruction struct {
+	StepText string `json:"step"`
+}
